# FreeAgent

./: .env.example  EXTENDED_README.md  FreeAgent  README.md  Setup_FreeAgent  install_and_run  opencode.json  pyproject.toml
context_architect/: __init__.py  assembler.py  audit.py  classifier.py  config.py  files.py  models.py  session.py  summarizer.py  window.py
context_architect/adapters/: __init__.py  anthropic.py  openai.py
context_architect/llm/: __init__.py  anthropic.py  fake.py  openai.py  reasoning.py
examples/: ca_proxy.py  fa_proxy.py
free_agent/: __init__.py  assembler.py  audit.py  classifier.py  config.py  files.py  models.py  recall.py  session.py  summarizer.py  window.py
free_agent/adapters/: __init__.py  anthropic.py  openai.py
free_agent/llm/: __init__.py  anthropic.py  base.py  fake.py  ollama.py  openai.py  reasoning.py
free_agent/store/: __init__.py  base.py  filesystem.py
system_prompt/: my_system_prompt.md
tests/: conftest.py  helpers.py  test_adapters_recall.py  test_classifier_assembler.py  test_degradation.py  test_end_to_end.py  test_files.py  test_reasoning.py  test_window.py
theme/: free-agent.json
tools/: recall_turn.ts
