[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "context_architect"
version = "0.1.0"
description = "Rework a coding agent's context at every turn boundary: compact summaries in view, full detail recoverable from disk."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "context_architect" }]
dependencies = []

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.40"]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["context_architect*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
